refactor: Refactor email sending logic in user registration route feat: Add email response handling in user registration route feat: Add water-drop.svg icon to metadata style: Update background styles in globals.css style: Update Nav component styles feat: Add GiWaterDrop icon to Login page feat: Create About page style: Update Main component styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,3 +39,10 @@ body {
     ),
     repeating-linear-gradient(#0014a855, #0016a8);
 }
+
+.about-bg {
+  background-color: #e5e5f7;
+  opacity: 1;
+  background-image: radial-gradient(#444cf7 1.25px, #e5e5f7 1.25px);
+  background-size: 25px 25px;
+}
